--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
     ],
     "require": {
         "php": ">=5.6",
-        "slim/slim": "^3.1",
+        "monolog/monolog": "^1.17",
+        "ramsey/uuid": "^4.1",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "slim/slim": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0"
